namespaces/ingress-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-gateway
  labels:
    istio.io/rev: asm-1112-17
